Fix spacing between tag selector items

--- a/css/edit.scss
+++ b/css/edit.scss
@@ -56,7 +56,7 @@ ul.tagit {
 	margin-top: 15px;
 
 	label {
-		margin-right: 30px;
+		margin-right: 1.5em;
 		display: inline-block;
 	}
 }
